--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@ You have discovered the ASCII Chalice! Follow this link to claim your reward: ht
         <p class="emoji-heading">🧭 ChatGPT, of course</p>
         <p><a href="https://chatgpt.com/share/67fbadc4-dcb0-8006-8831-ca30402106ac" target="_blank">https://chatgpt.com/share/67fbadc4-dcb0-8006-8831-ca30402106ac</a> (how i spent most of my time trying to get to the end of it)</p>
         
-        <p class="emoji-heading">🧭 How I transformed my Google Doc written report into a website </p>
+        <p class="emoji-heading">🧭 How I transformed my Google Doc written report into this interactive website </p>
         <p><a href="https://claude.ai/share/076a9898-c83a-4c33-880e-6fb5378e2def" target="_blank">https://claude.ai/share/076a9898-c83a-4c33-880e-6fb5378e2def</a> (helped me design and structure my CLI dungeon crawl report)</p>
                 <p class="emoji-heading">🧭 And most importantly, my friend Diyora, who got to the clue first and helped guide me when I was completely stuck</p>
             </div>
