--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@ You have discovered the ASCII Chalice! Follow this link to claim your reward: ht
     
     <footer>
         CLI Dungeon Crawl Report - a very good end to my weeks of headache<br>
-        (also weeks of learning new things that i didn't even knew existed)<br>
+        (also weeks of learning new things that I didn't even knew existed)<br>
         THANK YOU PROFESSOR
     </footer>
 </body>
